# file-validator

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
file_validator/: __init__.py  utilities.py  validate.py
file_validator/schema/: definition_schema.json
tests/: test_validation.py
tests/data/atmospheric-timeseries/: definition.json  filename.json  header.json  metadata.json  mini.txt
