[tool.poetry]
name = "file-validator"
version = "0.3.0"
description = ""
authors = ["Naveen Anil <naveen@nvn-nil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^4.21.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
